# svalinn

./: .gitattributes  CHANGELOG.md  CHECKLIST-QOL.adoc  ECOSYSTEM.scm  EVALUATION-REPORT.adoc  Justfile  LICENSE  LICENSE.txt  ONBOARDING_PLAN.adoc  PALIMPSEST.adoc  PLAYBOOK.scm  README.adoc  README.md  ROADMAP.adoc  STATE.scm  justfile
.claude/: CLAUDE.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: codeql.yml  conformance-consumer.yml  doctor-smoke.yml  e2e-readme.yml  guix-nix-policy.yml  instant-sync.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  release.yml  rsr-antipattern.yml  schema-lint.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  surface-contract-lint.yml  ts-blocker.yml  wellknown-enforcement.yml  workflow-linter.yml
.meta/: STATE.scm
docs/: mental-model.adoc  surface-contract.adoc  troubleshooting.adoc
spec/: SPEC_VERSION  cerro-torre-integration.adoc
spec/schemas/: container-info.v1.json  doctor-report.v1.json  error-response.v1.json
vordr/: .gitignore  Cargo.toml  build.rs  schema.sql
vordr/spark_core/: policy.gpr
vordr/spark_core/src/: container_policy.adb  container_policy.ads  oci_parser.adb  oci_parser.ads  policy_interface.adb  policy_interface.ads
vordr/src/: main.rs
vordr/src/cli/: auth.rs  completion.rs  compose.rs  doctor.rs  exec.rs  explain.rs  images.rs  inspect.rs  mod.rs  network.rs  profile.rs  ps.rs  run.rs  system.rs  volume.rs
vordr/src/engine/: config.rs  lifecycle.rs  mod.rs  state.rs
vordr/src/ffi/: gatekeeper.rs  mod.rs
vordr/src/mcp/: mod.rs
vordr/src/network/: mod.rs  netavark.rs
vordr/src/registry/: mod.rs
vordr/src/runtime/: mod.rs  shim.rs  ttrpc.rs
